--- a/app/src/main/res/layout/fragment_sample_home.xml
+++ b/app/src/main/res/layout/fragment_sample_home.xml
@@ -45,8 +45,6 @@
         android:id="@+id/itemsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="20dp" />
+        android:layout_marginTop="6dp" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
