--- a/app/src/main/res/layout/item_layout_2.xml
+++ b/app/src/main/res/layout/item_layout_2.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/cat_image"
+        android:id="@+id/dog_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@drawable/image_background"
@@ -24,8 +25,8 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/cat_image"
-        app:layout_constraintTop_toTopOf="@+id/cat_image" />
+        app:layout_constraintStart_toEndOf="@+id/dog_image"
+        app:layout_constraintTop_toTopOf="@+id/dog_image" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_description"
@@ -38,5 +39,16 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="@string/delete"
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/tv_description"
+        app:layout_constraintTop_toBottomOf="@id/tv_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
